WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172933
[macOS] REGRESSION: Link drag images blend into the background in Sierra and earlier
https://bugs.webkit.org/show_bug.cgi?id=172933
Summary
[macOS] REGRESSION: Link drag images blend into the background in Sierra and ...
mitz
Reported
2017-06-05 13:42:16 PDT
The new link drag images fit well with macOS High Sierra, because the OS gives them a drop shadow that separates them from white backgrounds. In Sierra and El Capitan, there is no shadow, so the images blend into white backgrounds.
Attachments
Add a drop shadow
(3.23 KB, patch)
2017-06-10 10:41 PDT
,
mitz
no flags
Details
Formatted Diff
Diff
Add a drop shadow
(3.32 KB, patch)
2017-06-10 10:44 PDT
,
mitz
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-06-05 21:11:33 PDT
<
rdar://problem/32580649
>
mitz
Comment 2
2017-06-10 10:41:07 PDT
Created
attachment 312572
[details]
Add a drop shadow
mitz
Comment 3
2017-06-10 10:44:30 PDT
Created
attachment 312573
[details]
Add a drop shadow
WebKit Commit Bot
Comment 4
2017-06-10 11:33:11 PDT
Comment on
attachment 312573
[details]
Add a drop shadow Clearing flags on attachment: 312573 Committed
r218052
: <
http://trac.webkit.org/changeset/218052
>
WebKit Commit Bot
Comment 5
2017-06-10 11:33:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug