[macOS] REGRESSION: Link drag images blend into the background in Sierra and earlier https://bugs.webkit.org/show_bug.cgi?id=172933 <rdar://problem/32580649>

Reviewed by Tim Horton.

* platform/mac/DragImageMac.mm:
(WebCore::createDragImageForLink): When targeting macOS Sierra and earlier, give the link
  drag image a drop shadow that resembles the one that macOS High Sierra applies to drag
  image layers.


Canonical link: https://commits.webkit.org/190064@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218052 268f45cc-cd09-0410-ab3c-d52691b4dbfc